# asma

./: .gitignore  DESIGN.md  LICENSE  README.md  README_JA.md  SECURITY_REVIEW.md  SECURITY_REVIEW_ROUND2.md  SPEC.md  pyproject.toml  setup.py
asma/: __init__.py  __main__.py
asma/cli/: main.py
asma/core/: checker.py  config.py  context.py  installer.py  skill_fetcher.py  skillset_writer.py  validator.py
asma/core/sources/: __init__.py  base.py  github.py  local.py
asma/models/: lock.py  skill.py
tests/: conftest.py  test_add_command.py  test_check_command.py  test_checker.py  test_cli.py  test_config.py  test_context.py  test_context_command.py  test_github_source.py  test_installer.py  test_list_command.py  test_lock.py  test_models.py  test_security.py  test_skill_fetcher.py  test_skillset_writer.py  test_sources.py  test_validator.py
tests/fixtures/valid_skill/: SKILL.md
